--- a/src/flexboxgrid.scss
+++ b/src/flexboxgrid.scss
@@ -10,16 +10,16 @@
   --xl-min: 1200px;
 }
 
-@custom-media --sm-viewport only screen and (min-width: 576px);
-@custom-media --md-viewport only screen and (min-width: 768px);
-@custom-media --lg-viewport only screen and (min-width: 992px);
-@custom-media --xl-viewport only screen and (min-width: 1200px);
+$smViewport: "only screen and (min-width: 576px)";
+$mdViewport: "only screen and (min-width: 768px)";
+$lgViewport: "only screen and (min-width: 992px)";
+$xlViewport: "only screen and (min-width: 1200px)";
 
-@custom-media --xs-only only screen and (max-width: 575px);
-@custom-media --sm-only only screen and (min-width: 576px) and (max-width: 767px);
-@custom-media --md-only only screen and (min-width: 768px) and (max-width: 991px);
-@custom-media --lg-only only screen and (min-width: 992px) and (max-width: 1199px);
-@custom-media --xl-only only screen and (min-width: 1200px);
+$xsOnly: "only screen and (max-width: 575px)";
+$smOnly: "only screen and (min-width: 576px) and (max-width: 767px)";
+$mdOnly: "only screen and (min-width: 768px) and (max-width: 991px)";
+$lgOnly: "only screen and (min-width: 992px) and (max-width: 1199px)";
+$xlOnly: "only screen and (min-width: 1200px)";
 
 .container {
   box-sizing: border-box;
@@ -34,28 +34,28 @@
   padding-left: var(--gutter-width, 16px);
 }
 
-@media (--sm-viewport) {
+@media #{$smViewport} {
   .container {
     width: calc(var(--sm-min) - var(--gutter-width));
     max-width: 100%;
   }
 }
 
-@media (--md-viewport) {
+@media #{$mdViewport} {
   .container {
     width: calc(var(--md-min) - var(--gutter-width));
     max-width: 100%;
   }
 }
 
-@media (--lg-viewport) {
+@media #{$lgViewport} {
   .container {
     width: calc(var(--lg-min) - var(--gutter-width));
     max-width: 100%;
   }
 }
 
-@media (--xl-viewport) {
+@media #{$xlViewport} {
   .container {
     width: calc(var(--xl-min) - var(--gutter-width));
     max-width: 100%;
@@ -183,7 +183,7 @@
 .col-lg-offset-9,
 .col-lg-offset-10,
 .col-lg-offset-11,
-.col-lg-offset-12, 
+.col-lg-offset-12,
 .col-xl,
 .col-xl-1,
 .col-xl-2,
@@ -379,7 +379,7 @@
   order: initial;
 }
 
-@media (--sm-viewport) {
+@media #{$smViewport} {
   .col-sm {
     flex-grow: 1;
     flex-basis: 0;
@@ -542,7 +542,7 @@
   }
 }
 
-@media (--md-viewport) {
+@media #{$mdViewport} {
   .col-md,
   .col-md-1,
   .col-md-2,
@@ -737,7 +737,7 @@
   }
 }
 
-@media (--lg-viewport) {
+@media #{$lgViewport} {
   .col-lg,
   .col-lg-1,
   .col-lg-2,
@@ -932,7 +932,7 @@
   }
 }
 
-@media (--xl-viewport) {
+@media #{$xlViewport} {
   .col-xl,
   .col-xl-1,
   .col-xl-2,
@@ -1127,31 +1127,31 @@
   }
 }
 
-@media (--xs-only) {
+@media #{$xsOnly} {
   .hidden-xs {
     display: none;
   }
 }
 
-@media (--sm-only) {
+@media #{$smOnly} {
   .hidden-sm {
     display: none;
   }
 }
 
-@media (--md-only) {
+@media #{$mdOnly} {
   .hidden-md {
     display: none;
   }
 }
 
-@media (--lg-only) {
+@media #{$lgOnly} {
   .hidden-lg {
     display: none;
   }
 }
 
-@media (--xl-only) {
+@media #{$xlOnly} {
   .hidden-xl {
     display: none;
   }
