remove all calc calls

--- a/src/flexboxgrid.scss
+++ b/src/flexboxgrid.scss
@@ -1,7 +1,7 @@
 $gutter-width: 16px;
 $outer-margin: 32px;
-$gutter-compensation: calc(($gutter-width * 0.5) * -1);
-$half-gutter-width: calc(($gutter-width * 0.5));
+$gutter-compensation: ($gutter-width * 0.5 * -1);
+$half-gutter-width: ($gutter-width * 0.5);
 $xs-min: 0rem;
 $sm-min: 576px;
 $md-min: 768px;
@@ -131,7 +131,7 @@ $xlOnly: "only screen and (min-width: #{$xl-min})";
 
 @media #{$smViewport} {
   .container {
-    width: calc($sm-min - $gutter-width);
+    width: ($sm-min - $gutter-width);
     max-width: 100%;
   }
   .col-sm {
@@ -188,7 +188,7 @@ $xlOnly: "only screen and (min-width: #{$xl-min})";
 
 @media #{$mdViewport} {
   .container {
-    width: calc($md-min - $gutter-width);
+    width: ($md-min - $gutter-width);
     max-width: 100%;
   }
   .col-md {
@@ -245,7 +245,7 @@ $xlOnly: "only screen and (min-width: #{$xl-min})";
 
 @media #{$lgViewport} {
   .container {
-    width: calc($lg-min - $gutter-width);
+    width: ($lg-min - $gutter-width);
     max-width: 100%;
   }
   .col-lg {
@@ -302,7 +302,7 @@ $xlOnly: "only screen and (min-width: #{$xl-min})";
 
 @media #{$xlViewport} {
   .container {
-    width: calc($xl-min - $gutter-width);
+    width: ($xl-min - $gutter-width);
     max-width: 100%;
   }
   .col-xl {
