--- a/src/flexboxgrid.scss
+++ b/src/flexboxgrid.scss
@@ -1,13 +1,13 @@
-$gutter-width: 16px;
-$outer-margin: 32px;
+$columnsNumber: 12 !default;
+$gutter-width: 16px !default;
+$outer-margin: 32px !default;
+$xs-min: 0rem !default;
+$sm-min: 576px !default;
+$md-min: 768px !default;
+$lg-min: 992px !default;
+$xl-min: 1200px !default;
 $gutter-compensation: ($gutter-width * 0.5 * -1);
 $half-gutter-width: ($gutter-width * 0.5);
-$xs-min: 0rem;
-$sm-min: 576px;
-$md-min: 768px;
-$lg-min: 992px;
-$xl-min: 1200px;
-$columnsNumber: 12;
 $xsViewport: "only screen";
 $smViewport: "only screen and (min-width: #{$sm-min})";
 $mdViewport: "only screen and (min-width: #{$md-min})";
